--- a/python/test_http3.ipynb
+++ b/python/test_http3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "493ecaec-5ef8-454d-adad-96187ec17702",
    "metadata": {},
    "outputs": [],
@@ -1896,12 +1896,19 @@
     "            # 3. Bob sends a connection request to Anton\n",
     "            bob_create_request_url = f\"{bob_base_url}/didexchange/create-request?their_public_did=NyaE9SFSneSNRq6Ch8N9Pt&alias=Anton\"\n",
     "            bob_create_request_response = await create_request(session, bob_create_request_url)\n",
-    "            bob_connection_id = bob_create_request_response[\"connection_id\"]\n",
+    "            #bob_connection_id = bob_create_request_response[\"connection_id\"]\n",
     "        \n",
     "            # Wait for the connection request to appear in Anton's connections\n",
-    "            await asyncio.sleep(2)  # Wait for a short period to ensure the request is processed\n",
+    "            await asyncio.sleep(2) \n",
     "        \n",
-    "            # 4. Anton sends a message to Bob\n",
+    "            # 4. query again (if in different machines, ignore all step 1-3)\n",
+    "            anton_connections_url = f\"{anton_base_url}/connections\"\n",
+    "            anton_connections_response = await fetch_connections(session, anton_connections_url)\n",
+    "            anton_connections = anton_connections_response[\"results\"]\n",
+    "\n",
+    "            bob_connection_id = bob_connection_id = anton_connections[0][\"connection_id\"]\n",
+    "\n",
+    "            # 5. Anton sends a message to Bob\n",
     "            send_message_url = f\"{anton_base_url}/connections/{bob_connection_id}/send-message\"\n",
     "\n",
     "            test_cases = [\n",
@@ -1926,22 +1933,6 @@
     "    print(\"Process interrupted by user\")\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97f4bb7b-0f2d-4c52-9794-c3332083bf75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6eacac92-ce9b-4d25-8c8b-000a16ea23ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
