--- a/python/test_http_ssl.ipynb
+++ b/python/test_http_ssl.ipynb
@@ -243,19 +243,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "38bc03e0-f65c-4345-96a7-b4cb04321983",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'asyncio' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 53\u001b[0m\n\u001b[0;32m     50\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mProcess interrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     52\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 53\u001b[0m     \u001b[43masyncio\u001b[49m\u001b[38;5;241m.\u001b[39mrun(main_prepare())\n\u001b[0;32m     54\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m     55\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mProcess interrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'asyncio' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted connection: http://localhost:8021/connections/112d5eee-1f7a-493d-b102-33d2d73a93d5\n",
+      "Deleted connection: http://localhost:8021/connections/e88f8aa1-eb5d-4abd-b0a8-e6f75a6c2179\n"
      ]
     }
    ],
@@ -400,7 +397,6 @@
     "        test_cases = [\n",
     "            ('data/text', 3, 20),\n",
     "            ('data/picture', 3, 20),\n",
-    "            ('data/music', 3, 20),\n",
     "            ('data/video', 3, 20),\n",
     "        ]\n",
     "\n",
